Message alert spacing fixes; hide Use Contact Info checkbox on Create Event form if user info is not available

--- a/static_files/assets/sass/_layout.scss
+++ b/static_files/assets/sass/_layout.scss
@@ -128,7 +128,7 @@ header {
 
 /* Alert Messages */
 #messages {
-    margin: 10px 0 0 0;
+    margin: 0 0 20px 0;
 }
 
 
