--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -8747,7 +8747,7 @@ header {
 /* Alert Messages */
 /* line 130, ../assets/sass/_layout.scss */
 #messages {
-  margin: 10px 0 0 0; }
+  margin: 0 0 20px 0; }
 
 /* Page Nav Tabs */
 /* line 136, ../assets/sass/_layout.scss */
